:bug: focus on many texts fail on contrast

--- a/aksel.nav.no/website/components/styles/global.css
+++ b/aksel.nav.no/website/components/styles/global.css
@@ -40,5 +40,5 @@ html:has(.globalstyles) {
 }
 
 .skiplink {
-  @apply absolute left-0 -translate-y-full bg-border-focus p-4 text-text-on-inverted no-underline focus-within:translate-y-0 focus-within:shadow-[inset_0_0_0_2px_white] focus-within:outline-none;
+  @apply absolute left-0 -translate-y-full bg-border-focus p-4 no-underline focus-within:translate-y-0 focus-within:shadow-[inset_0_0_0_2px_white] focus-within:outline-none focus-visible:text-text-on-inverted;
 }
